--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
 <body>
 	<div class="wrapper">
 		<header class="header">
-			<nav class="navbar"></nav>
+			<div class="container">
+				<nav class="navbar">
+					<a href="#" class="navbar-brand"><img src="images/logo.png" alt="Tajem"></a>
+					<ul class="navbar-nav">
+						<li class="navbar-item"><a href="" class="navbar-link active">Home</a></li>
+						<li class="navbar-item"><a href="" class="navbar-link">About</a></li>
+						<li class="navbar-item"><a href="" class="navbar-link">Expertise</a></li>
+						<li class="navbar-item"><a href="" class="navbar-link">Teams</a></li>
+						<li class="navbar-item"><a href="" class="navbar-link">Works</a></li>
+						<li class="navbar-item"><a href="" class="navbar-link">People say</a></li>
+						<li class="navbar-item"><a href="" class="navbar-link">Contact</a></li>
+					</ul>
+					<a href="" class="navbar-toggler"></a>
+				</nav>
+			</div>
 		</header>
 		<main class="main">
 			<section class="section">
