--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 			<div class="container">
 				<nav class="navbar">
 					<a href="#" class="navbar-brand"><img src="images/logo.png" alt="Tajem"></a>
-					<ul class="navbar-nav">
-						<li class="navbar-item"><a href="" class="navbar-link active">Home</a></li>
-						<li class="navbar-item"><a href="" class="navbar-link">About</a></li>
-						<li class="navbar-item"><a href="" class="navbar-link">Expertise</a></li>
-						<li class="navbar-item"><a href="" class="navbar-link">Teams</a></li>
-						<li class="navbar-item"><a href="" class="navbar-link">Works</a></li>
-						<li class="navbar-item"><a href="" class="navbar-link">People say</a></li>
-						<li class="navbar-item"><a href="" class="navbar-link">Contact</a></li>
+					<ul class="navbar-nav navbar-collapse">
+						<li class="navbar-item"><a href="#" class="navbar-link active">Home</a></li>
+						<li class="navbar-item"><a href="#" class="navbar-link">About</a></li>
+						<li class="navbar-item"><a href="#" class="navbar-link">Expertise</a></li>
+						<li class="navbar-item"><a href="#" class="navbar-link">Teams</a></li>
+						<li class="navbar-item"><a href="#" class="navbar-link">Works</a></li>
+						<li class="navbar-item"><a href="#" class="navbar-link">People say</a></li>
+						<li class="navbar-item"><a href="#" class="navbar-link">Contact</a></li>
 					</ul>
-					<a href="" class="navbar-toggler"></a>
+					<a href="#" class="navbar-toggler"><span></span><span></span><span></span></a>
 				</nav>
 			</div>
 		</header>
 		<main class="main">
-			<section class="section">
+			<section class="section section-fill-height" style="background-color: #2c264a;">
 				<div class="container">
 					
 				</div>
